--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <button id="nextButton" type="button">Nästa fråga</button>
     </div>
   </div>
-  
+  <footer class="footer"><a class="a-button" href="next.html">Click me to go to new page</a></footer>
     
     <script src='index.js'></script>
 </body>
